use latest and greatest Java