@@ -1,21 +1,36 @@
+/*
+ * This file is part of Bob.
+ *
+ * Bob is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Bob is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with Bob. If not, see <http://www.gnu.org/licenses/>.
+ */
+
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id "java"
+    id "com.github.johnrengelman.shadow" version "6.0.0"
+    id "com.github.ben-manes.versions" version "0.28.0"
 }
 
-group 'org.bob-cd'
-version '1.0-SNAPSHOT'
+group "org.bob-cd"
+version "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
 }
 
 def vertx_version = "4.0.0-milestone5"
-def kotlin_version = "1.3.72"
-def spek_version = "2.0.9"
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "io.vertx:vertx-core:$vertx_version"
     implementation "io.vertx:vertx-web:$vertx_version"
     implementation "io.vertx:vertx-web-client:$vertx_version"
@@ -24,30 +39,30 @@ dependencies {
     implementation "io.vertx:vertx-config:$vertx_version"
     implementation "org.slf4j:slf4j-simple:1.6.1"
 
-    testImplementation "org.spekframework.spek2:spek-dsl-jvm:$spek_version"
-    testImplementation 'junit:junit:4.12'
-    testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:$spek_version"
-    // spek requires kotlin-reflect, can be omitted if already in the classpath
-    testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testImplementation "junit:junit:4.13"
 }
 
-test {
-    useJUnitPlatform {
-        includeEngines 'spek2'
-    }
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
 }
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
+compileJava {
+    sourceCompatibility = "14"
+    targetCompatibility = "14"
 }
 
 shadowJar {
-    archivesBaseName = 'bob-api-server'
+    archivesBaseName = "bob-api-server"
 
     manifest {
-        attributes 'Main-Class': 'MainKt'
+        attributes "Main-Class": "Main"
     }
 }
